2008-04-23  Daniel Morales  <daniminas@gmail.com>

	* POTFILES.IN: Add data/lists_dlg.xml

2008-02-08  Brian Pepple  <bpepple@fedoraproject.org>

	* POTFILES.in: Add src/twitux-hint.c
	
2008-02-07  Brian Pepple  <bpepple@fedoraproject.org>

	* fr.po:
	* de.po: convert to UTF-8.

2007-12-23  Brian Pepple  <bpepple@fedoraproject.org>

	* POTFILES.in: Add twitux-network.c & twitux-parser.c
	
2007-08-18  Daniel Morales  <daniminas@gmail.com>

	* es.po: Updated translation to v0.60

2007-08-26  Brian Pepple  <bpepple@fedoraproject.org>

	* POTFILES.in: Add twitux-spell.c & twitux-preferences.c
	

2007-08-20  Brian Pepple  <bpepple@fedoraproject.org>

	* POTFILES.in: add main.glade

2007-08-18  Brian Pepple  <bpepple@fedoraproject.org>

	* POTFILES.in: remove src/conf.c
